lab01 - final commit

--- a/lab01/set-covering.ipynb
+++ b/lab01/set-covering.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,13 +34,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
     "PROBLEM_SIZE = 25\n",
     "NUM_SETS = 20\n",
-    "T_PROB = 0.15\n",
+    "T_PROB = 0.2\n",
     "SETS = generate_sets(T_PROB, PROBLEM_SIZE, NUM_SETS)\n",
     "\n",
     "State = namedtuple('State', ['taken', 'not_taken'])"
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,16 +97,15 @@
    "source": [
     "I tried to take a step forward with the optimistic distance heuristic above.\\\n",
     "With this heuristic (below) I tried to find a way to make the resulting cost more pessimistic, by calculating more precisely how many sets do we have to take to bring our agent to the goal.\\\n",
-    "Sadly, this heuristic is suboptimal due to its non admissibility, because it can overestimate the cost from a state to the goal: this is caused by the fact that it takes the best matching as first set: it could possibly be that a worst matching set can lead to a minor cost."
+    "Sadly, this heuristic is suboptimal due to its non admissibility, because it can overestimate the cost from a state to the goal: this is caused by the fact that it takes the best matching as first set, because it could possibly happend that a worst matching set can lead to a minor cost."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# try to take the information of the candidates down with the function call\n",
     "def h02(state, j=0):\n",
     "  already_covered = covered(state)\n",
     "  if np.all(already_covered):\n",
@@ -138,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,18 +159,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def f_not_adm(state):\n",
+    "def f_not_adm_00(state):\n",
     "  return len(state.taken) + h02(state)\n",
-    "f_not_adm_wrapper = \"f_not_adm\", f_not_adm"
+    "f_not_adm_00_wrapper = \"f_not_adm_00\", f_not_adm_00"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def f_not_adm_01(state):\n",
+    "  return len(state.taken) + h02(state, 1)\n",
+    "f_not_adm_01_wrapper = \"f_not_adm_01\", f_not_adm_01"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,9 +213,228 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d3ed938907514b189e073d5081b1a280",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "greedy solved in 6 steps (6 tiles)\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "119a9ad9c5764a05a4bc36df77734397",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "f_adm solved in 2,033 steps (6 tiles)\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3cadfc1a428e4a98806a40bd9d461d4d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "f_not_adm_00 solved in 245 steps (6 tiles)\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "83e6684a7f6447f1868860e868a6493e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "f_not_adm_01 solved in 245 steps (6 tiles)\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "640bbcf7cd9f4795b57fb99de57f651b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "greedy solved in 6 steps (6 tiles)\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5035b1dd6d714c41a25231a356329e2c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "f_adm solved in 2,033 steps (6 tiles)\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "76fb6f453da0491ba2260fb958acef2e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "f_not_adm_00 solved in 245 steps (6 tiles)\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "bb4321c4547e406f87f476cdccacff1d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "f_not_adm_01 solved in 245 steps (6 tiles)\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0d6913f5941b4b1a8e1776074bd006a2",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "greedy solved in 6 steps (6 tiles)\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e1b9d6dce6984d84b0e87ec5dc0c958b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m/Users/claudio/Documents/turin/polito/anno II/semestre I/computational intelligence/my_git/computational_intelligence/lab01/set-covering.ipynb Cell 16\u001b[0m line \u001b[0;36m9\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/claudio/Documents/turin/polito/anno%20II/semestre%20I/computational%20intelligence/my_git/computational_intelligence/lab01/set-covering.ipynb#X20sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m print_result(solve(greedy_wrapper))\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/claudio/Documents/turin/polito/anno%20II/semestre%20I/computational%20intelligence/my_git/computational_intelligence/lab01/set-covering.ipynb#X20sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m \u001b[39m# admissible heuristic A* \u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/claudio/Documents/turin/polito/anno%20II/semestre%20I/computational%20intelligence/my_git/computational_intelligence/lab01/set-covering.ipynb#X20sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m print_result(solve(f_adm_wrapper))\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/claudio/Documents/turin/polito/anno%20II/semestre%20I/computational%20intelligence/my_git/computational_intelligence/lab01/set-covering.ipynb#X20sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m \u001b[39m# non admissible heuristic A* with j=0\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/claudio/Documents/turin/polito/anno%20II/semestre%20I/computational%20intelligence/my_git/computational_intelligence/lab01/set-covering.ipynb#X20sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m print_result(solve(f_not_adm_00_wrapper))\n",
+      "\u001b[1;32m/Users/claudio/Documents/turin/polito/anno II/semestre I/computational intelligence/my_git/computational_intelligence/lab01/set-covering.ipynb Cell 16\u001b[0m line \u001b[0;36m2\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/claudio/Documents/turin/polito/anno%20II/semestre%20I/computational%20intelligence/my_git/computational_intelligence/lab01/set-covering.ipynb#X20sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m \u001b[39mfor\u001b[39;00m action \u001b[39min\u001b[39;00m current_state[\u001b[39m1\u001b[39m]:\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/claudio/Documents/turin/polito/anno%20II/semestre%20I/computational%20intelligence/my_git/computational_intelligence/lab01/set-covering.ipynb#X20sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m   new_state \u001b[39m=\u001b[39m State(\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/claudio/Documents/turin/polito/anno%20II/semestre%20I/computational%20intelligence/my_git/computational_intelligence/lab01/set-covering.ipynb#X20sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m     current_state\u001b[39m.\u001b[39mtaken \u001b[39m^\u001b[39m {action},\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/claudio/Documents/turin/polito/anno%20II/semestre%20I/computational%20intelligence/my_git/computational_intelligence/lab01/set-covering.ipynb#X20sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m     current_state\u001b[39m.\u001b[39mnot_taken \u001b[39m^\u001b[39m {action},\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/claudio/Documents/turin/polito/anno%20II/semestre%20I/computational%20intelligence/my_git/computational_intelligence/lab01/set-covering.ipynb#X20sZmlsZQ%3D%3D?line=18'>19</a>\u001b[0m   )\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/claudio/Documents/turin/polito/anno%20II/semestre%20I/computational%20intelligence/my_git/computational_intelligence/lab01/set-covering.ipynb#X20sZmlsZQ%3D%3D?line=19'>20</a>\u001b[0m   frontier\u001b[39m.\u001b[39mput((f(new_state), new_state))\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/claudio/Documents/turin/polito/anno%20II/semestre%20I/computational%20intelligence/my_git/computational_intelligence/lab01/set-covering.ipynb#X20sZmlsZQ%3D%3D?line=20'>21</a>\u001b[0m _, current_state \u001b[39m=\u001b[39m frontier\u001b[39m.\u001b[39mget()\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/claudio/Documents/turin/polito/anno%20II/semestre%20I/computational%20intelligence/my_git/computational_intelligence/lab01/set-covering.ipynb#X20sZmlsZQ%3D%3D?line=21'>22</a>\u001b[0m pbar\u001b[39m.\u001b[39mupdate(\u001b[39m1\u001b[39m)\n",
+      "\u001b[1;32m/Users/claudio/Documents/turin/polito/anno II/semestre I/computational intelligence/my_git/computational_intelligence/lab01/set-covering.ipynb Cell 16\u001b[0m line \u001b[0;36m2\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/claudio/Documents/turin/polito/anno%20II/semestre%20I/computational%20intelligence/my_git/computational_intelligence/lab01/set-covering.ipynb#X20sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mf_adm\u001b[39m(state):\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/claudio/Documents/turin/polito/anno%20II/semestre%20I/computational%20intelligence/my_git/computational_intelligence/lab01/set-covering.ipynb#X20sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m   \u001b[39mreturn\u001b[39;00m \u001b[39mlen\u001b[39m(state\u001b[39m.\u001b[39mtaken) \u001b[39m+\u001b[39m h01(state)\n",
+      "\u001b[1;32m/Users/claudio/Documents/turin/polito/anno II/semestre I/computational intelligence/my_git/computational_intelligence/lab01/set-covering.ipynb Cell 16\u001b[0m line \u001b[0;36m6\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/claudio/Documents/turin/polito/anno%20II/semestre%20I/computational%20intelligence/my_git/computational_intelligence/lab01/set-covering.ipynb#X20sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m   \u001b[39mreturn\u001b[39;00m \u001b[39m0\u001b[39m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/claudio/Documents/turin/polito/anno%20II/semestre%20I/computational%20intelligence/my_git/computational_intelligence/lab01/set-covering.ipynb#X20sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m missing_size \u001b[39m=\u001b[39m PROBLEM_SIZE \u001b[39m-\u001b[39m \u001b[39msum\u001b[39m(already_covered)\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/claudio/Documents/turin/polito/anno%20II/semestre%20I/computational%20intelligence/my_git/computational_intelligence/lab01/set-covering.ipynb#X20sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m candidates \u001b[39m=\u001b[39m \u001b[39msorted\u001b[39m((\u001b[39msum\u001b[39m(np\u001b[39m.\u001b[39mlogical_and(s, np\u001b[39m.\u001b[39mlogical_not(already_covered))) \u001b[39mfor\u001b[39;00m s \u001b[39min\u001b[39;00m SETS), reverse\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/claudio/Documents/turin/polito/anno%20II/semestre%20I/computational%20intelligence/my_git/computational_intelligence/lab01/set-covering.ipynb#X20sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m taken \u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/claudio/Documents/turin/polito/anno%20II/semestre%20I/computational%20intelligence/my_git/computational_intelligence/lab01/set-covering.ipynb#X20sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m \u001b[39mwhile\u001b[39;00m \u001b[39msum\u001b[39m(candidates[:taken]) \u001b[39m<\u001b[39m missing_size:\n",
+      "\u001b[1;32m/Users/claudio/Documents/turin/polito/anno II/semestre I/computational intelligence/my_git/computational_intelligence/lab01/set-covering.ipynb Cell 16\u001b[0m line \u001b[0;36m6\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/claudio/Documents/turin/polito/anno%20II/semestre%20I/computational%20intelligence/my_git/computational_intelligence/lab01/set-covering.ipynb#X20sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m   \u001b[39mreturn\u001b[39;00m \u001b[39m0\u001b[39m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/claudio/Documents/turin/polito/anno%20II/semestre%20I/computational%20intelligence/my_git/computational_intelligence/lab01/set-covering.ipynb#X20sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m missing_size \u001b[39m=\u001b[39m PROBLEM_SIZE \u001b[39m-\u001b[39m \u001b[39msum\u001b[39m(already_covered)\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/claudio/Documents/turin/polito/anno%20II/semestre%20I/computational%20intelligence/my_git/computational_intelligence/lab01/set-covering.ipynb#X20sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m candidates \u001b[39m=\u001b[39m \u001b[39msorted\u001b[39m((\u001b[39msum\u001b[39m(np\u001b[39m.\u001b[39mlogical_and(s, np\u001b[39m.\u001b[39mlogical_not(already_covered))) \u001b[39mfor\u001b[39;00m s \u001b[39min\u001b[39;00m SETS), reverse\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/claudio/Documents/turin/polito/anno%20II/semestre%20I/computational%20intelligence/my_git/computational_intelligence/lab01/set-covering.ipynb#X20sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m taken \u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/claudio/Documents/turin/polito/anno%20II/semestre%20I/computational%20intelligence/my_git/computational_intelligence/lab01/set-covering.ipynb#X20sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m \u001b[39mwhile\u001b[39;00m \u001b[39msum\u001b[39m(candidates[:taken]) \u001b[39m<\u001b[39m missing_size:\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "assert goal_check(State(set(range(NUM_SETS)), set())), \"Probelm not solvable\"\n",
     "iter = 10\n",
@@ -217,8 +446,11 @@
     "  # admissible heuristic A* \n",
     "  print_result(solve(f_adm_wrapper))\n",
     "\n",
-    "  # non admissible heuristic A* \n",
-    "  print_result(solve(f_not_adm_wrapper))\n",
+    "  # non admissible heuristic A* with j=0\n",
+    "  print_result(solve(f_not_adm_00_wrapper))\n",
+    "\n",
+    "  # non admissible heuristic A* with j=1\n",
+    "  print_result(solve(f_not_adm_01_wrapper))\n",
     "\n",
     "  if(i < iter-1):\n",
     "    SETS = generate_sets(T_PROB, PROBLEM_SIZE, NUM_SETS)\n",
