--- a/lab02/lab02-nim.ipynb
+++ b/lab02/lab02-nim.ipynb
@@ -308,13 +308,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "opo = opo_es([0], 0.1, 100, 20, leave_one_strategy, pure_random)\n",
     "opl = opl_es([0], 10, 0.1, 100, 20, leave_one_strategy, pure_random)\n",
     "ocl = ocl_es([0], 10, 0.1, 100, 20, leave_one_strategy, pure_random)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "current_fitness: 0.042, current_params: [0.3970142607427536]\n",
+      "current_fitness: 0.074, current_params: [0.49862388]\n",
+      "current_fitness: 0.924, current_params: [0.2689157]\n",
+      "current_fitness: 0.949, current_params: [0.43066689]\n",
+      "current_fitness: 0.951, current_params: [0.44528703]\n",
+      "current_fitness: 0.952, current_params: [0.33095433]\n",
+      "current_fitness: 0.958, current_params: [0.33473784]\n"
+     ]
+    }
+   ],
+   "source": [
+    "opo.optimize()"
    ]
   },
   {
@@ -326,15 +349,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "current_fitness: 0.055, current_params: [0.4991534964541594]\n",
-      "current_fitness: 0.949, current_params: [0.4507188]\n",
-      "current_fitness: 0.957, current_params: [0.44176776]\n",
-      "current_fitness: 0.969, current_params: [0.37462422]\n"
+      "current_fitness: 0.93, current_params: [0.25879448931372484]\n",
+      "current_fitness: 0.945, current_params: [0.36029543]\n",
+      "current_fitness: 0.959, current_params: [0.34248384]\n",
+      "current_fitness: 0.967, current_params: [0.34108312]\n",
+      "current_fitness: 0.97, current_params: [0.33836412]\n"
      ]
     }
    ],
    "source": [
-    "opo.optimize()"
+    "opl.optimize()"
    ]
   },
   {
@@ -346,16 +370,111 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "current_fitness: 0.961, current_params: [0.3632961380949693]\n",
-      "current_fitness: 0.963, current_params: [0.33846289]\n",
-      "current_fitness: 0.965, current_params: [0.45678131]\n",
-      "current_fitness: 0.968, current_params: [0.37479374]\n",
-      "current_fitness: 0.969, current_params: [0.36254104]\n"
+      "current_fitness: 0.268, current_params: [0.8806887034935686]\n",
+      "current_fitness: 0.583, current_params: [0.63961989]\n",
+      "current_fitness: 0.825, current_params: [0.55176188]\n",
+      "current_fitness: 0.834, current_params: [0.55775418]\n",
+      "current_fitness: 0.951, current_params: [0.46159605]\n",
+      "current_fitness: 0.948, current_params: [0.36939692]\n",
+      "current_fitness: 0.953, current_params: [0.44246255]\n",
+      "current_fitness: 0.962, current_params: [0.45821112]\n",
+      "current_fitness: 0.957, current_params: [0.34690864]\n",
+      "current_fitness: 0.954, current_params: [0.42943063]\n",
+      "current_fitness: 0.958, current_params: [0.36025874]\n",
+      "current_fitness: 0.945, current_params: [0.34246464]\n",
+      "current_fitness: 0.937, current_params: [0.2744364]\n",
+      "current_fitness: 0.953, current_params: [0.33102513]\n",
+      "current_fitness: 0.956, current_params: [0.32500352]\n",
+      "current_fitness: 0.963, current_params: [0.33359873]\n",
+      "current_fitness: 0.95, current_params: [0.45715188]\n",
+      "current_fitness: 0.956, current_params: [0.3401952]\n",
+      "current_fitness: 0.959, current_params: [0.36456115]\n",
+      "current_fitness: 0.952, current_params: [0.33872363]\n",
+      "current_fitness: 0.968, current_params: [0.34978216]\n",
+      "current_fitness: 0.955, current_params: [0.36334447]\n",
+      "current_fitness: 0.966, current_params: [0.42952375]\n",
+      "current_fitness: 0.955, current_params: [0.43579364]\n",
+      "current_fitness: 0.955, current_params: [0.43782563]\n",
+      "current_fitness: 0.96, current_params: [0.35171022]\n",
+      "current_fitness: 0.952, current_params: [0.46886298]\n",
+      "current_fitness: 0.952, current_params: [0.36493658]\n",
+      "current_fitness: 0.96, current_params: [0.32978652]\n",
+      "current_fitness: 0.949, current_params: [0.45942602]\n",
+      "current_fitness: 0.963, current_params: [0.46965791]\n",
+      "current_fitness: 0.957, current_params: [0.45371003]\n",
+      "current_fitness: 0.957, current_params: [0.34094818]\n",
+      "current_fitness: 0.958, current_params: [0.35072174]\n",
+      "current_fitness: 0.956, current_params: [0.32989763]\n",
+      "current_fitness: 0.959, current_params: [0.46479083]\n",
+      "current_fitness: 0.953, current_params: [0.47164511]\n",
+      "current_fitness: 0.958, current_params: [0.43550655]\n",
+      "current_fitness: 0.956, current_params: [0.37183162]\n",
+      "current_fitness: 0.958, current_params: [0.45583845]\n",
+      "current_fitness: 0.956, current_params: [0.3329127]\n",
+      "current_fitness: 0.954, current_params: [0.44961405]\n",
+      "current_fitness: 0.947, current_params: [0.47468525]\n",
+      "current_fitness: 0.947, current_params: [0.47308257]\n",
+      "current_fitness: 0.958, current_params: [0.44595165]\n",
+      "current_fitness: 0.957, current_params: [0.35045875]\n",
+      "current_fitness: 0.951, current_params: [0.42783409]\n",
+      "current_fitness: 0.962, current_params: [0.33133374]\n",
+      "current_fitness: 0.954, current_params: [0.36878277]\n",
+      "current_fitness: 0.956, current_params: [0.32578684]\n",
+      "current_fitness: 0.961, current_params: [0.42728391]\n",
+      "current_fitness: 0.965, current_params: [0.43283633]\n",
+      "current_fitness: 0.957, current_params: [0.36664826]\n",
+      "current_fitness: 0.967, current_params: [0.33317767]\n",
+      "current_fitness: 0.954, current_params: [0.4255306]\n",
+      "current_fitness: 0.959, current_params: [0.34566275]\n",
+      "current_fitness: 0.945, current_params: [0.3345829]\n",
+      "current_fitness: 0.965, current_params: [0.36689767]\n",
+      "current_fitness: 0.968, current_params: [0.3660625]\n",
+      "current_fitness: 0.952, current_params: [0.43769931]\n",
+      "current_fitness: 0.957, current_params: [0.44355618]\n",
+      "current_fitness: 0.959, current_params: [0.43320934]\n",
+      "current_fitness: 0.963, current_params: [0.36632307]\n",
+      "current_fitness: 0.955, current_params: [0.35531753]\n",
+      "current_fitness: 0.955, current_params: [0.43105862]\n",
+      "current_fitness: 0.958, current_params: [0.36441672]\n",
+      "current_fitness: 0.966, current_params: [0.3606799]\n",
+      "current_fitness: 0.959, current_params: [0.33384445]\n",
+      "current_fitness: 0.95, current_params: [0.44922547]\n",
+      "current_fitness: 0.961, current_params: [0.43966412]\n",
+      "current_fitness: 0.955, current_params: [0.44972069]\n",
+      "current_fitness: 0.957, current_params: [0.43277093]\n",
+      "current_fitness: 0.968, current_params: [0.46131687]\n",
+      "current_fitness: 0.951, current_params: [0.33414562]\n",
+      "current_fitness: 0.957, current_params: [0.33611721]\n",
+      "current_fitness: 0.952, current_params: [0.4515715]\n",
+      "current_fitness: 0.956, current_params: [0.44338321]\n",
+      "current_fitness: 0.953, current_params: [0.44670939]\n",
+      "current_fitness: 0.956, current_params: [0.44554117]\n",
+      "current_fitness: 0.958, current_params: [0.47207667]\n",
+      "current_fitness: 0.959, current_params: [0.35079671]\n",
+      "current_fitness: 0.955, current_params: [0.34943095]\n",
+      "current_fitness: 0.967, current_params: [0.32615765]\n",
+      "current_fitness: 0.966, current_params: [0.34709077]\n",
+      "current_fitness: 0.959, current_params: [0.47155421]\n",
+      "current_fitness: 0.955, current_params: [0.46348922]\n",
+      "current_fitness: 0.955, current_params: [0.46246605]\n",
+      "current_fitness: 0.954, current_params: [0.3665762]\n",
+      "current_fitness: 0.96, current_params: [0.42724141]\n",
+      "current_fitness: 0.96, current_params: [0.46024903]\n",
+      "current_fitness: 0.957, current_params: [0.44524376]\n",
+      "current_fitness: 0.954, current_params: [0.4449591]\n",
+      "current_fitness: 0.96, current_params: [0.36458755]\n",
+      "current_fitness: 0.955, current_params: [0.35038634]\n",
+      "current_fitness: 0.968, current_params: [0.33991137]\n",
+      "current_fitness: 0.965, current_params: [0.35636231]\n",
+      "current_fitness: 0.963, current_params: [0.33643125]\n",
+      "current_fitness: 0.958, current_params: [0.33264303]\n",
+      "current_fitness: 0.953, current_params: [0.3628704]\n",
+      "current_fitness: 0.955, current_params: [0.36684471]\n"
      ]
     }
    ],
    "source": [
-    "opl.optimize()"
+    "ocl.optimize()"
    ]
   },
   {
@@ -367,125 +486,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "current_fitness: 0.276, current_params: [0.891212445964451]\n",
-      "current_fitness: 0.374, current_params: [0.75383131]\n",
-      "current_fitness: 0.822, current_params: [0.56737166]\n",
-      "current_fitness: 0.958, current_params: [0.45955745]\n",
-      "current_fitness: 0.957, current_params: [0.46638954]\n",
-      "current_fitness: 0.951, current_params: [0.43438162]\n",
-      "current_fitness: 0.95, current_params: [0.33122722]\n",
-      "current_fitness: 0.957, current_params: [0.44096]\n",
-      "current_fitness: 0.953, current_params: [0.35610216]\n",
-      "current_fitness: 0.958, current_params: [0.4546455]\n",
-      "current_fitness: 0.946, current_params: [0.43538427]\n",
-      "current_fitness: 0.951, current_params: [0.43893019]\n",
-      "current_fitness: 0.954, current_params: [0.4657754]\n",
-      "current_fitness: 0.958, current_params: [0.47093148]\n",
-      "current_fitness: 0.958, current_params: [0.46782512]\n",
-      "current_fitness: 0.951, current_params: [0.36461982]\n",
-      "current_fitness: 0.956, current_params: [0.36925698]\n",
-      "current_fitness: 0.964, current_params: [0.42967203]\n",
-      "current_fitness: 0.962, current_params: [0.35818497]\n",
-      "current_fitness: 0.96, current_params: [0.35833992]\n",
-      "current_fitness: 0.952, current_params: [0.35769606]\n",
-      "current_fitness: 0.954, current_params: [0.36215279]\n",
-      "current_fitness: 0.961, current_params: [0.44763783]\n",
-      "current_fitness: 0.953, current_params: [0.33013113]\n",
-      "current_fitness: 0.959, current_params: [0.32841682]\n",
-      "current_fitness: 0.96, current_params: [0.34246745]\n",
-      "current_fitness: 0.951, current_params: [0.35871361]\n",
-      "current_fitness: 0.949, current_params: [0.33647756]\n",
-      "current_fitness: 0.968, current_params: [0.36562415]\n",
-      "current_fitness: 0.957, current_params: [0.35695026]\n",
-      "current_fitness: 0.955, current_params: [0.34179612]\n",
-      "current_fitness: 0.965, current_params: [0.32758062]\n",
-      "current_fitness: 0.953, current_params: [0.35940878]\n",
-      "current_fitness: 0.955, current_params: [0.35997941]\n",
-      "current_fitness: 0.96, current_params: [0.37497447]\n",
-      "current_fitness: 0.947, current_params: [0.44957782]\n",
-      "current_fitness: 0.955, current_params: [0.45604426]\n",
-      "current_fitness: 0.961, current_params: [0.34999792]\n",
-      "current_fitness: 0.95, current_params: [0.35429951]\n",
-      "current_fitness: 0.95, current_params: [0.3627998]\n",
-      "current_fitness: 0.958, current_params: [0.43369496]\n",
-      "current_fitness: 0.957, current_params: [0.33361549]\n",
-      "current_fitness: 0.959, current_params: [0.36077283]\n",
-      "current_fitness: 0.96, current_params: [0.33398707]\n",
-      "current_fitness: 0.947, current_params: [0.4373828]\n",
-      "current_fitness: 0.957, current_params: [0.33007988]\n",
-      "current_fitness: 0.947, current_params: [0.25841598]\n",
-      "current_fitness: 0.95, current_params: [0.44123596]\n",
-      "current_fitness: 0.959, current_params: [0.35072059]\n",
-      "current_fitness: 0.95, current_params: [0.24679592]\n",
-      "current_fitness: 0.946, current_params: [0.32791941]\n",
-      "current_fitness: 0.963, current_params: [0.46945563]\n",
-      "current_fitness: 0.958, current_params: [0.43467217]\n",
-      "current_fitness: 0.958, current_params: [0.44463503]\n",
-      "current_fitness: 0.956, current_params: [0.37082981]\n",
-      "current_fitness: 0.961, current_params: [0.32854882]\n",
-      "current_fitness: 0.959, current_params: [0.34551566]\n",
-      "current_fitness: 0.897, current_params: [0.14301977]\n",
-      "current_fitness: 0.921, current_params: [0.13859504]\n",
-      "current_fitness: 0.952, current_params: [0.36708205]\n",
-      "current_fitness: 0.964, current_params: [0.34299469]\n",
-      "current_fitness: 0.952, current_params: [0.36507052]\n",
-      "current_fitness: 0.958, current_params: [0.34832138]\n",
-      "current_fitness: 0.966, current_params: [0.33575924]\n",
-      "current_fitness: 0.96, current_params: [0.36272746]\n",
-      "current_fitness: 0.956, current_params: [0.47043288]\n",
-      "current_fitness: 0.948, current_params: [0.44027414]\n",
-      "current_fitness: 0.955, current_params: [0.45101132]\n",
-      "current_fitness: 0.963, current_params: [0.43359573]\n",
-      "current_fitness: 0.945, current_params: [0.35025683]\n",
-      "current_fitness: 0.954, current_params: [0.45082998]\n",
-      "current_fitness: 0.962, current_params: [0.45833429]\n",
-      "current_fitness: 0.948, current_params: [0.44770497]\n",
-      "current_fitness: 0.843, current_params: [0.55762077]\n",
-      "current_fitness: 0.954, current_params: [0.4360122]\n",
-      "current_fitness: 0.962, current_params: [0.35324623]\n",
-      "current_fitness: 0.962, current_params: [0.43403841]\n",
-      "current_fitness: 0.956, current_params: [0.32654296]\n",
-      "current_fitness: 0.965, current_params: [0.32900524]\n",
-      "current_fitness: 0.96, current_params: [0.33803756]\n",
-      "current_fitness: 0.962, current_params: [0.34965444]\n",
-      "current_fitness: 0.965, current_params: [0.3250932]\n",
-      "current_fitness: 0.957, current_params: [0.37085272]\n",
-      "current_fitness: 0.95, current_params: [0.44118055]\n",
-      "current_fitness: 0.956, current_params: [0.34544386]\n",
-      "current_fitness: 0.965, current_params: [0.35829374]\n",
-      "current_fitness: 0.954, current_params: [0.347716]\n",
-      "current_fitness: 0.959, current_params: [0.33701895]\n",
-      "current_fitness: 0.956, current_params: [0.37184216]\n",
-      "current_fitness: 0.949, current_params: [0.43584004]\n",
-      "current_fitness: 0.966, current_params: [0.36515014]\n",
-      "current_fitness: 0.951, current_params: [0.46540466]\n",
-      "current_fitness: 0.962, current_params: [0.36906868]\n",
-      "current_fitness: 0.958, current_params: [0.34657163]\n",
-      "current_fitness: 0.957, current_params: [0.36894059]\n",
-      "current_fitness: 0.958, current_params: [0.35164984]\n",
-      "current_fitness: 0.964, current_params: [0.34740577]\n",
-      "current_fitness: 0.953, current_params: [0.32628865]\n",
-      "current_fitness: 0.955, current_params: [0.36510483]\n",
-      "current_fitness: 0.948, current_params: [0.24588965]\n"
-     ]
-    }
-   ],
-   "source": [
-    "ocl.optimize()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(1+1)-es | l:1 | s:0.1 | e:100 | r:20 | final_p: [0.37462422]\n",
-      "(1+l)-es | l:10 | s:0.1 | e:100 | r:20 | final_p: [0.36254104]\n",
-      "(1,l)-es | l:10 | s:0.1 | e:100 | r:20 | final_p: [0.24588965]\n"
+      "(1+1)-es | l:1 | s:0.1 | e:100 | r:20 | final_p: [0.33473784] | final_fit: 0.958\n",
+      "(1+l)-es | l:10 | s:0.1 | e:100 | r:20 | final_p: [0.33836412] | final_fit: 0.97\n",
+      "(1,l)-es | l:10 | s:0.1 | e:100 | r:20 | final_p: [0.36684471] | final_fit: 0.955\n"
      ]
     }
    ],
