--- a/lab02/lab02-nim.ipynb
+++ b/lab02/lab02-nim.ipynb
@@ -157,12 +157,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### leave-one strategy:\n",
+    "Single parameter strategy that indicates how many rows to leave with just one element"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# one parameter strategy: percentage of leave-one rows\n",
     "def leave_one_strategy(params:list, state: Nim) -> Nimply:\n",
     "  needed = round(params[0] * len(state.rows))\n",
     "\n",
